Fixes #107 - "No Part Information" Banner Causes Web UI to Shift

--- a/Binner/Binner.Web/ClientApp/src/custom.css
+++ b/Binner/Binner.Web/ClientApp/src/custom.css
@@ -474,6 +474,10 @@ code {
     font-family: 'Source Code Pro', monospace;
 }
 
+.page-banner {
+    height: 30px;
+}
+
 .page-notice {
     background-color: #fcf7c9;
     padding: 2px 10px;
